# algorealm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  algorealm.py  algorealm_dynasty.py  algorealm_law.teal  pyproject.toml  renovate.json
.github/workflows/: ci.yml
card/: README.md  algorealm_card_contract.teal
src/: actions.py  algorealm.py  const.py  query.py
src/contracts/: README.md  algorealm_approval.teal  algorealm_clear.teal  algorealm_law.teal  tmpl_algorealm_law.teal
src/contracts/card/: README.md  algorealm_card_contract.teal
