[tool.poetry]
name = "algorealm-cli"
version = "0.3.0"
description = "An interactive game of randomness powered by Algorand blockchain (by cusma)"
authors = ["cosimo.bassi@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
msgpack = "^1.0.4"
py-algorand-sdk = "^1.20.2"
prettytable = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
